[package]
name = "scene"
version = "0.1.0"
authors = ["Felipe Ferreira da Silva <dasifefe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string_fixed = {git = "https://github.com/dasifefe-game-development/string_fixed"}
